--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/hueanmy/LoginApp#readme",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "^4.15.4"
   }
 }
