--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/hueanmy/LoginApp#readme",
   "dependencies": {
     "dotenv": "^4.0.0",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "knex": "^0.13.0"
   }
 }
