--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/hueanmy/LoginApp#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
-    "knex": "^0.13.0"
+    "knex": "^0.13.0",
+    "mysql": "^2.14.1",
+    "nunjucks": "^3.0.1",
+    "passport": "^0.4.0"
   }
 }
