--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "express-validator": "^3.2.1",
     "knex": "^0.13.0",
     "mysql": "^2.14.1",
     "nunjucks": "^3.0.1",
