--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   "homepage": "https://github.com/hueanmy/LoginApp#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "express-validator": "^3.2.1",
     "knex": "^0.13.0",
     "mysql": "^2.14.1",
     "nunjucks": "^3.0.1",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
